일단 세팅 완료

--- a/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
+++ b/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=core.log.jdbc.driver.OracleDriver
-jdbc.url=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.jdbcUrl=jdbc:oracle:thin:@localhost:1521:XE
 jdbc.username=scott
-jdbc.password=TIGER
+jdbc.password=tiger
