--- a/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
+++ b/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
@@ -1,2 +1,4 @@
-jdbc.driverClassName=core.log.jdbc.driver.OracleDriver
-jdbc.jdbcUrl=jdbc:oracle:thin:@localhost:1521:XE
+jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
+jdbc.jdbcUrl=jdbc:oracle:thin:@localhost:1521:xe
+jdbc.username=bit05
+jdbc.password=0505
