--- a/voiceless_screaming/.classpath
+++ b/voiceless_screaming/.classpath
@@ -41,5 +41,10 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/CKFinder-2.6.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/CKFinderPlugin-FileEditor-2.6.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/CKFinderPlugin-ImageResize-2.6.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/CKFinderPlugin-Watermark-2.6.3.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/thumbnailator-0.4.8.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
