--- a/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
+++ b/voiceless_screaming/src/main/webapp/WEB-INF/config/jdbc/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=oracle.jdbc.driver.OracleDriver
 jdbc.jdbcUrl=jdbc:oracle:thin:@localhost:1521:XE
-jdbc.username=bit05
-jdbc.password=0505
+jdbc.username=root
+jdbc.password=1234
